# final_project

./: .gitignore  .gitmodules  README.md  config.py  environment.yml  hpc_node_status.sh  metrics_mnist_fid.py  mnist_classifier.py  monitor_celeba_download.sh  pyproject.toml  requirements.md  requirements.txt  wikiart_classifier.py  wikiart_dataset_custom.py
.github/: copilot-instructions.md
checkpoints/: wikiart_training_losses.json
configs/: base.yaml  transformer_500m.yaml  vqvae_pretrained.yaml
custom_datasets/: __init__.py  celeba_hq_dataset.py  wikiart_dataset.py
docs/: mnist_classifier_metrics_plan.md
models/: __init__.py  custom_unet.py  custom_unet_celeba_ldm.py  custom_unet_cifar10.py  custom_unet_wikiart.py  vae_wrapper.py
new/: celeba_download.ipynb  color_reduction.ipynb  diffusers_pipeline.ipynb  laion400m_huggingface.ipynb  laion400m_parquet.ipynb  train10.ipynb  train2.ipynb  train3.ipynb  train4_with_time_embeddings_and_ddpm_scheduler.ipynb  train7_diffusers_unet.ipynb  train8_celebhq.ipynb  train9_with_norm_layers.ipynb
new/color reduction palettes/: cifar10_palette.npy  color_reduction.ipynb  laion2B_en_aesthetic_palette.ipynb
noise_schedulers/: linear_scheduler.ipynb  single_step_forward_process.tex
notebooks/: inference1_t2i_mnist_cfg.ipynb  lab_check.ipynb  laion400m_huggingface.ipynb  train10.ipynb  train11_better_time_embeddings.ipynb  train13.ipynb  train13_third_party_unet.ipynb  train16_big_model_cifar10_conditional.ipynb  train1_flickr8.ipynb  train1_t2i_mnist_cfg.ipynb  train4_with_time_embeddings_and_ddpm_scheduler.ipynb  train6_cifar_31m_params.ipynb  train7_diffusers_unet.ipynb  train8_cifar.ipynb
notebooks-old/color reduction palettes/: celeba_palette.ipynb
notebooks-old/complete_new_model/: .env
notebooks-old/old/: laion400m_parquet.ipynb
notebooks/.ipynb_checkpoints/: experiment_pretrained-checkpoint.ipynb
notebooks/01_mnist_experiment/: generate_images.ipynb  inference1_t2i_mnist_cfg.ipynb  metrics2_evaluate_t2i_mnist.ipynb  metrics3_pytorch_fid.ipynb  train1_t2i_mnist_cfg.ipynb  train2_train_mnist_classifier.ipynb
notebooks/02_cifar10_experiment/: generate_images.ipynb  inference1_t2i_cifar10_cfg.ipynb  metrics1_evaluate_cifar10.ipynb  train1_t2i_cifar10_cfg.ipynb
notebooks/03_wikiart_experiment/: generate_images.ipynb  inference1_t2i_wikiart_cfg.ipynb  inference3_inference_steps_sweep_perceptual_metrics.ipynb  inference4_best_quality_5x5_grid.ipynb  metrics1_evaluate_wikiart.ipynb  train1_t2i_wikiart_cfg.ipynb  train2_t2i_wikiart_cfg_continue.ipynb  train2_train_wikiart_classifier.ipynb
notebooks/04_celeba_hq_experiment/: README.md  plot_loss_500_epochs.ipynb  train1_t2i_celeba_hq_ldm_cfg.ipynb
notebooks/color reduction palettes/: celeba_palette.ipynb  celeba_palette.npy  cifar10_palette.ipynb  laion5b_palette.ipynb  laion5b_palette_8bit.npy
notebooks/color reduction tensor size/: celeb_before_after_color_reduction_tensor_size.ipynb
notebooks/complete_new_model/: cifar10_caption.ipynb  train1.ipynb  train3.ipynb  train4.ipynb
notebooks/old/: clip.ipynb  train10_better_sampling.ipynb  train12_use_cosine_noise_sched.ipynb  train2_old.ipynb  train5_cifar.ipynb
old/src/: train.ipynb  train2.ipynb
old/stable_diffusion/: .gitmodules  README.md  pyproject.toml
old/stable_diffusion_research/: CONVERSION_COMPLETE.md  FILES_CREATED.txt  MNIST_SCRIPT_CONVERSION.md  QUICK_START_MNIST.md  README.md  accelerate_config.yaml  module_avail.txt  requirements.txt
research-paper/: README.md  build.sh
research-paper/appendix/: supplementary.tex
research-paper/src/: .gitignore  abstract.tex  conclusion.tex  discussion.tex  experiment_celeba_hq_ldm_cfg.tex  experiment_cifar10_t2i_cfg.tex  experiment_comparison.tex  experiment_mnist_t2i_cfg.tex  experiment_wikiart_t2i_cfg.tex  experiments.tex  introduction.tex  main.tex  main.toc  methodology.tex  references.bib  related_work.tex  results.tex
scripts/: inference.py  new_env.sh  train_latent_gpt.py
slurm/: JUPYTER_SETUP.md  NODE_SELECTION_GUIDE.md  README.md  README_JOBS.md  check_gpu_availability.sh  download_shard_images.sh  gpu_info.sh  jupyter_lab.sh  jupyter_lab_inference_cpu.sh  jupyter_notebook_interactive.sh  jupyter_notebook_interactive_nogpu.sh  mlflow_server.sh  train7.sh  train_8gpu.sh
slurm/clusters_info/: README.md  check_all_partitions.sh  check_gpu_resources.sh  check_node_details.sh  find_best_partition.sh  quick_status.sh  run_all.sh
slurm/jobs/: detect_cuda.sh  gpu_info.sh  jupyter_server.sh
slurm/scripts/: detect_cuda.sh  gpu_info.sh  start_jupyter.sh
src/: __init__.py  linear_noise_scheduler.py  model.py  sampler.py  train.ipynb  train.py  unet.py
src/data/: __init__.py  flickr30k.py  transforms.py
src/models/: __init__.py  _vqgan_hf.py  clip_encoder.py  latent_gpt.py  vqvae.py
src/scripts/: check_cuda.py  (+1 more)
stable_diffusion/: requirements.md  requirements.txt
stable_diffusion_research/: CHECKPOINT_ISSUE_RESOLVED.md  FIXES_IMPLEMENTED.md  IMPROVEMENTS_PLAN.md  MNIST_READY.md  pyproject.toml
stable_diffusion_research/configs/dataset/: coco.yaml  laion_subset.yaml  snacks.yaml
stable_diffusion_research/configs/model/: unet_small.yaml  unet_tiny.yaml
stable_diffusion_research/outputs/: config.yaml
stable_diffusion_research/scripts/: download_pretrained.py  evaluate.py  monitor_gpus.sh  validate_fixes.py
stable_diffusion_research/slurm/: README.md  evaluate.sh  train_2gpu.sh  train_multigpu.sh
stable_diffusion_research/src/: __init__.py
stable_diffusion_research/src/data/: dataset.py  transforms.py
stable_diffusion_research/src/diffusion/: noise_scheduler.py  sampler.py
stable_diffusion_research/src/evaluation/: clip_score.py  evaluator.py
stable_diffusion_research/src/models/: __init__.py  resnet.py  unet.py  vae.py
stable_diffusion_research/src/training/: __init__.py  checkpoint.py  ema.py
stable_diffusion_research/src/utils/: __init__.py  config.py  distributed.py  logging.py
summary work latex/: .gitignore  conv2dtranspose.tex  upsampling2d.tex
utils/: __init__.py  image_utils.py
vae/: vae_blocks.py
(+137 files in other folders)
