[project]
name = "text-conditioned-image-generation-using-stable-diffusion"
version = "0.1.0"
description = "My final MSC project."
authors = [{ name = "Shlomi Domnenco", email = "shlomidom@gmail.com" }]
readme = "README.md"
requires-python = "3.11.8"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "poethepoet (>=0.34.0,<0.35.0)",
    "torchinfo (>=1.8.0,<2.0.0)",
    "torchsummary (>=1.5.1,<2.0.0)",
    "kagglehub (>=0.3.12,<0.4.0)",
    "einops (>=0.8.1,<0.9.0)",
    "transformers (>=4.52.3,<5.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    # "torch (>=2.7.0,<3.0.0)", # Removed this, defined below for cleaner structure
    # "torchvision (>=0.22.0,<0.23.0)", # Removed this, defined below for cleaner structure
    # "torchaudio (>=2.7.0,<3.0.0)", # Removed this, defined below for cleaner structure
    "mlflow (>=2.22.0,<3.0.0)",
    # "win10toast (>=0.9,<0.10)", # REMOVED: Windows-specific
    "torchmetrics (>=1.7.2,<2.0.0)",
    "torch-fidelity (>=0.3.0,<0.4.0)",
    "diffusers (>=0.33.1,<0.34.0)",
    "accelerate (>=1.7.0,<2.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "lmdb (>=1.6.2,<2.0.0)",
    "fvcore (>=0.1.5.post20221221,<0.2.0)",
    "notebook (>=7.4.3,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


# [[tool.poetry.source]] # REMOVED: This was for CUDA PyTorch which doesn't work on Mac
# name = "pytorch-gpu"
# url = "https://download.pytorch.org/whl/cu118"
# priority = "explicit"


[tool.poetry.dependencies]
# Moved these here and removed 'source' to allow Poetry to find appropriate macOS wheels
torch = ">=2.7.0,<3.0.0"
torchvision = ">=0.22.0,<0.23.0"
torchaudio = ">=2.7.0,<3.0.0"

[tool.poe.tasks]
# install_cuda = { cmd = "pip install torch==2.7.0+cu118 torchvision==0.22.0+cu118 torchaudio==2.7.0+cu118 --index-url https://download.pytorch.org/whl/cu118" } # REMOVED: CUDA-specific